fix: remove image overflow

--- a/src/home/home.scss
+++ b/src/home/home.scss
@@ -69,8 +69,7 @@
 
       .image {
         img {
-          width: 125% !important;
-          transform: translateX(-15%);
+          transform: translateX(-9%);
         }
       }
     }
@@ -91,13 +90,6 @@
           font-size: 2vw;
           margin-right: 7vw;
           font-weight: 350;
-        }
-      }
-
-      .image {
-        img {
-          width: 115% !important;
-          transform: translateX(-15%);
         }
       }
     }
